data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_744.wast
;; 5. **Test Description**: Use a `br_if` instruction with a dynamic condition that evaluates to true.    - **Constraint Checked**: Ensures that the `br_if` evaluates conditions dynamically during runtime.    - **Incorrect Condition Evaluation**: The branching might be incorrect if conditional evaluations are improperly handled.

(assert_invalid
  (module (func $dynamic-branch-condition
    (block (br_if 0 (local.get 0)))
    (param i32))
  )
  "type mismatch"
)